# watkit_API

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 03f749aad757_creando_tablas.py
app/: README.md  main.py
app/api/v1/endpoints/: admin.py  clients.py  webhook.py
app/domain/services/: order_service.py
app/infraestructure/database/: config.py  models.py
app/infraestructure/repositories/: client_repository.py  enterprise_repository.py  product_repository.py
message_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
