[project]
name = "message_api"
version = "0.1.0"
description = "API de mensajeria para gestion de clientes via whatsapp"
authors = [
    {name = "Wilson23MLPro", email = "wilsoncarlosraul@gmail.com"}
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "sqlalchemy>=2.0.27",
    "aiosqlite>=0.19.0",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.1",
    "alembic>=1.15.0"
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]